toc h1-h4; add 2015-07-05-post-template.md; modify 2015-07-06-handy-dev-reference.md